<resources>
    <string name="app_name">Vocab Builder</string>
    
    <!-- Hint -->
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="hint_name">personal name</string>
    <string name="hint_word">word</string>
    <string name="hint_trans1">translation 1</string>
    <string name="hint_trans2">translation 2</string>
    <string name="hint_trans3">translation 3</string>

    <!-- Button -->
    <string name="button_login">Login</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_play">Play</string>
    <string name="button_result">Result</string>
    <string name="button_change_password">Change Password</string>
    <string name="button_edit">Edit</string>

    <!-- Toast -->
    <string name="toast_login_failed">username or password are incorrect!</string>
    <string name="toast_login_succeeded">Welcome!</string>
    <string name="toast_sign_up_success">Account created successfully!</string>
    <string name="toast_sign_up_fail">Something went wrong. Please, try again!</string>
    <string name="toast_name_field_empty">The personal name field cannot be empty!</string>
    <string name="toast_username_field_empty">The username field cannot be empty!</string>
    <string name="toast_password_field_empty">The password field cannot be empty!</string>
    <string name="toast_word_field_empty">The word field cannot be empty!</string>
    <string name="toast_translation_fields_empty">You must set at least one translation!</string>
    <string name="toast_new_word_created">New word saved!</string>
    <string name="toast_something_went_wrong">Sorry, something went wrong!</string>
    <string name="toast_no_words_to_review">Congratulations! There are no words to review!</string>
    <string name="toast_all_fields_must_be_filled">All fields must be filled!</string>
    <string name="toast_no_games_history_to_show">There\'s no game history to show!</string>
    <string name="toast_nothing_to_show">There\'s nothing to show!</string>
    <string name="toast_word_updated">A word was updated. Please, refresh the page!</string>

    <!-- Languages -->
    <string-array name="languages">
        <item>English</item>
        <item>Spanish</item>
        <item>German</item>
        <item>Chinese</item>
        <item>Portuguese</item>
        <item>Italian</item>
        <item>French</item>
        <item>Turkish</item>
        <item>Japanese</item>
        <item>Russian</item>
    </string-array>

    <!-- "Languages Flags" -->
    <array name="language_flags">
        <item>@drawable/english</item>
        <item>@drawable/spanish</item>
        <item>@drawable/german</item>
        <item>@drawable/chinese</item>
        <item>@drawable/portuguese</item>
        <item>@drawable/italian</item>
        <item>@drawable/french</item>
        <item>@drawable/turkish</item>
        <item>@drawable/japanese</item>
        <item>@drawable/russian</item>
    </array>

    <!-- Tab Icons -->
    <array name="tab_icons">
        <item>@drawable/words_white</item>
        <item>@drawable/practice_white</item>
        <item>@drawable/statistics_white</item>
        <item>@drawable/settings_white</item>
    </array>

    <!-- TextView -->
    <string name="text_total_plays">Total plays: %1$d</string>
    <string name="text_correct">Correct: %1$d</string>
    <string name="text_incorrect">Incorrect: %1$d</string>
    <string name="text_last_5_games_label">Last 5 games: </string>
    <string name="text_number_of_words">Number of Words</string>
    <string name="text_total_words">Total words: %1$d</string>
    <string name="text_total_words_label">Total words</string>
    <string name="text_correct_label">Correct</string>
    <string name="text_incorrect_label">Incorrect</string>
    <string name="text_date_label">Date</string>
    <string name="text_words_label">Words</string>
    <string name="text_review_meter_label">Review Meter</string>
    <string name="text_notification">Notification</string>
    <string name="text_auto_login">Auto-login</string>
    <string name="text_name">Name</string>
    <string name="text_username">Username</string>
    <string name="text_new_password">New Password</string>

    <!-- Statistics List -->
    <array name="statistics_list">
        <item>Need to Review</item>
        <item>Game History</item>
    </array>

    <!-- String -->
    <plurals name="string_notification_message">
        <item quantity="one">Hello, %1$s! There is %2$d word that need to be reviewed.</item>
        <item quantity="other">Hello, %1$s! There are %2$d words that need to be reviewed.</item>
    </plurals>

    <!-- Settings Options -->
    <string-array name="settings_options">
        <item>Account</item>
        <item>About</item>
    </string-array>

    <!-- Check Box -->
    <string name="check_remember_me">Remember me</string>

    <!-- Dialog -->
    <string name="dialog_save_changes">Confirm changes?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <!-- About Activity -->
    <string name="text_about">
        VocabBuilder will help you improve your vocabulary using a Flashcard game.
        This is one of the best ways to learn new words and remember them for a long period of time.
        With this app you can check which words need to be reviewed, you can receive notifications when
        certain words need to be reviewed and you can check the results of all flashcard games you\'ve played.
        \n\nWe use the Spaced Repetition Algorithm in order to give you the best results while learning a new language.
        This algorithm uses the idea of increasing intervals between words review, which is essential to not
        let your learning process fall into the forgetting curve.
    </string>

</resources>
