<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/activityLogin_etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:textStyle="italic"/>

        <EditText
            android:id="@+id/activityLogin_etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"/>

        <CheckBox
            android:id="@+id/activityLogin_checkAutoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_remember_me"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/activityLogin_btLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/activityLogin_btSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sign_up"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</RelativeLayout>