<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/activitySignUp_etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:textStyle="italic"/>

        <EditText
            android:id="@+id/activitySignUp_etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:textStyle="italic"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/activitySignUp_etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/activitySignUp_btConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_confirm"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button_states"
            android:textColor="@drawable/button_text_color"/>

        <Button
            android:id="@+id/activitySignUp_btCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:layout_marginTop="15dp"
            android:background="@drawable/cancel_button_states"
            android:textColor="@drawable/button_text_color"/>

    </LinearLayout>

</RelativeLayout>