<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:padding="20dp">

    <TextView
        android:id="@+id/activityFlashCardResult_txtTotalWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:text="@string/text_total_words"
        android:textSize="20sp"/>

    <LinearLayout
        android:id="@+id/activityFlashCardResult_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/activityFlashCardResult_txtTotalWords"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/activityFlashCardResult_txtCorrect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/text_correct"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/activityFlashCardResult_txtIncorrect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/text_incorrect"
            android:textSize="18sp"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/activityFlashCardResult_listOfWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activityFlashCardResult_container"
        android:layout_marginTop="30dp" />

</RelativeLayout>