<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/dialogDetailedWord_imgLang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/dialogDetailedWord_txtWord"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="22sp"
                android:layout_gravity="center|center_horizontal"
                android:textAlignment="center"/>

        </LinearLayout>

        <TextView
            android:id="@+id/dialogDetailedWord_txtTranslations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:layout_gravity="center|center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/dialogDetailedWord_txtTotalPlays"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_total_plays"
                android:layout_weight="1"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/dialogDetailedWord_txtCorrect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_correct"
                android:layout_weight="1"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/dialogDetailedWord_txtIncorrect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_incorrect"
                android:layout_weight="1"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/dialogDetailedWord_txtLast5gamesLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_last_5_games_label"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/dialogDetailedWord_txtLast5games"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="center"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <Button
            android:id="@+id/dialogDetailedWord_btEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/button_edit"
            android:background="@drawable/custom_button_states"
            android:textColor="@drawable/button_text_color"/>


    </LinearLayout>



</RelativeLayout>